# Travis-CI-cpp14-clang-on-Linux

./: .travis.yml  CMakeLists.txt  README.md  UseCpp14.cpp
